--- a/code/02.第二课资料/第二课代码注释.ipynb
+++ b/code/02.第二课资料/第二课代码注释.ipynb
@@ -47,7 +47,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**两个模块的区别：**[torch.nn 和 torch.functional 的区别](https://blog.csdn.net/hawkcici160/article/details/80140059)"
+    "**两个模块的区别：**[torch.nn 和 torch.functional 的区别](https://blog.csdn.net/hawkcici160/article/details/80140059)\n",
+    ">torch.nn.Module中实现layer的都是一个特殊的类，可以去查阅，他们都是以class xxxx来定义的，会自动提取可学习的参数\n",
+    "而nn.functional中的函数，更像是纯函数，由def function( )定义，只是进行简单的数学运算而已。\n",
+    ">functional中的函数是一个确定的不变的运算公式，输入数据产生输出."
    ]
   },
   {
