--- a/code/01.第一课资料/FizzBuzz.ipynb
+++ b/code/01.第一课资料/FizzBuzz.ipynb
@@ -43,7 +43,8 @@
     "print(fizz_buzz_decode(2, fizz_buzz_encode(2)))\n",
     "print(fizz_buzz_decode(5, fizz_buzz_encode(5)))\n",
     "print(fizz_buzz_decode(12, fizz_buzz_encode(12)))\n",
-    "print(fizz_buzz_decode(15, fizz_buzz_encode(15)))"
+    "print(fizz_buzz_decode(15, fizz_buzz_encode(15)))\n",
+    "# "
    ]
   },
   {
@@ -10500,6 +10501,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
