--- a/code/03.第三课资料/language-model.ipynb
+++ b/code/03.第三课资料/language-model.ipynb
@@ -92,7 +92,8 @@
     "print(\"vocabulary size: {}\".format(len(TEXT.vocab)))\n",
     "\n",
     "VOCAB_SIZE = len(TEXT.vocab)\n",
-    "# vocabulary size: 50002   添加一个 不常用  一个未知\n",
+    "# vocabulary size: 50002   添加一个 不常用  一个填充\n",
+    "# <unk>   <pad>\n",
     "train_iter, val_iter, test_iter = torchtext.data.BPTTIterator.splits(\n",
     "    (train, val, test), batch_size=BATCH_SIZE, device=-1, bptt_len=32, repeat=False, shuffle=True)\n",
     "# BPTTIterator    迭代器，用来生成 batch ，bptt_len=32即 BPTT 反向回传距离"
